# heisenstocks

./: .env  README.md  create_admin.py  main.py  pyproject.toml
app/: __init__.py  utils.py
app/models/: company.py  index.py  stock.py  user.py
app/routes/: auth.py  charts.py  companies.py  main.py
app/scripts/: fetch_new_indices_data.py  fetch_new_stock_data.py
app/static/css/: chart.css  style.css
app/static/css/charts/: chart.css
app/static/js/: chart.js
app/static/js/charts/: chart.js
app/static/js/charts/indicators/: bollinger.js  indicator.js  sma.js
app/static/js/indicators/: indicator.js  smaChartManager.js  smaIndicator.js  squeezeIndicator.js  sslHybridIndicator.js
app/templates/: base.html  home.html
app/templates/auth/: admin.html  companies.html  data.html  login.html
app/templates/charts/: index.html
app/templates/companies/: detail.html  index.html
