[project]
name = "stonks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "pymongo>=4.12.0",
    "flask-caching>=2.0.0",
    "blinker>=1.9.0",
]
